@@ -9,6 +9,22 @@ As a general rule, each demo provides an integration tests that bootstraps
 the OSGi platform, installs the demo and its dependencies and interacts with 
 the demo application.
 
+SAMPLES OVERVIEW
+----------------
+
+* simple-service
+A simple demo for publishing OSGi services using Spring-DM
+
+* simple-web-app
+A simple web application running inside OSGi using Spring-DM. The war contains
+servlets, static resources and Java Server Faces (JSF)
+
+* weather
+A weather service publisher/consumer application that consists of multiple bundles.
+
+* web-console
+A Spring-MVC application that interacts with the OSGi platform.
+
 BUILDING AND DEPLOYMENT
 -----------------------
 
